# cpc-sbom

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pr.yaml  snap.yaml
cpc_sbom/: __init__.py  generate.py  inject.py
cpc_sbom/templates/: spdx.jinja2
demo/: demo.sh  demo_oci.sh  ubuntu-jammy-oci-amd64-root.tar.gz.spdx  ubuntu-jammy-oci-amd64-root.tar.gz_installed_files.spdx  ubuntu-lunar-oci-amd64-root.tar.gz.spdx  ubuntu-lunar-oci-amd64-root.tar.gz_installed_files.spdx
snap/: snapcraft.yaml
tests/: conftest.py  mock-state.json  mock-ubuntu-jammy-oci-amd64-root.tar.gz.spdx  oci_test_generate.sh  oci_test_inject.sh  test-ubuntu-jammy-oci-amd64-root.tar.gz.spdx  test_commands.py  test_packages.py
tests/fixtures/: openssh-client-copyright
