[bumpversion]
current_version = 0.1.2
commit = True
tag = True

[metadata]
name = cpc-sbom
url = https://github.com/canonical/cpc-sbom
author = Phil Roche
author_email = phil.roche@canonical.com
license = "GNU General Public License v3"
description = "Create Software Bill Of Materials (SBOM) in spdx format"
classifiers = 
	Programming Language :: Python :: 3

[options]
package_dir = 
	=.
packages = find:
install_requires = 
	python-apt
	python-debian
	jinja2

[options.entry_points]
console_scripts = 
	cpc-sbom = cpc_sbom:generate_sbom

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bdist_wheel]
universal = 1
