[bumpversion]
current_version = 0.1.7
commit = True
tag = True

[metadata]
name = cpc-sbom
url = https://github.com/canonical/cpc-sbom
author = Phil Roche
author_email = phil.roche@canonical.com
license = "GNU General Public License v3"
description = "Create Software Bill Of Materials (SBOM) in spdx format"
classifiers = 
	Programming Language :: Python :: 3

[options]
package_dir = 
	=.
include_package_data = True
packages = find:
install_requires = 
	python-apt @ git+https://salsa.debian.org/apt-team/python-apt.git@main#egg=python-apt
	python-debian @ git+https://salsa.debian.org/python-debian-team/python-debian.git@master#egg=python-debian
	jinja2
license_files = LICENSE

[options.package_data]
cpc-sbom = templates/*.jinja2

[options.entry_points]
console_scripts = 
	cpc-sbom = cpc_sbom.generate:generate_sbom
	cpc-sbom-inject = cpc_sbom.inject:inject_artifact_name

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:cpc_sbom/__init__.py]
search = CPC_SBOM_VERSION = "{current_version}"
replace = CPC_SBOM_VERSION = "{new_version}"

[bumpversion:file:cpc_sbom/generate.py]
search = CPC_SBOM_VERSION = "{current_version}"
replace = CPC_SBOM_VERSION = "{new_version}"

[bdist_wheel]
universal = 1
